[css][xs]: news/documentation feature image right alignment bug fix

--- a/ckanext/nhs/fanstatic/css/nhs.css
+++ b/ckanext/nhs/fanstatic/css/nhs.css
@@ -1882,11 +1882,11 @@ blockquote {
 
 .page-list-item {
     display: flex;
-    flex-direction: row-reverse;
     background: #FFFFFF;
     border: 1px solid #D8DDE0;
     box-shadow: 0px 4px 0px #D8DDE0;
 }
+
 .page-list-item .span3.image {
     width: 300px;
     padding: 4px;
